--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app"
+    "start": "node server.js",
+    "heroku-postbuild": "ng build --prod"
   },
   "author": "Wesley Jiang",
   "license": "ISC",
@@ -14,5 +15,9 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "mongoose": "^5.1.6"
+  },
+  "engines": {
+    "node": "v10.2.1",
+    "npm": "5.6.0"
   }
 }
